--- a/scripts/go-generate.in
+++ b/scripts/go-generate.in
@@ -5,6 +5,7 @@ export GO111MODULE='@GO111MODULE@'
 export GO_BUILD_TAGS='@GO_TAGS@'
 export GOFLAGS='@GOFLAGS@'
 export GO_TOOL='@GO@'
+unset GOARCH
 
 exec '@GO@' generate \
 	-tags '@GO_TAGS@' \
